# advent-of-code-2023

./: .gitignore  .pre-commit-config.yaml  README.md  parse_input.py  pyproject.toml
day-1/: day_1.py  day_1_tests.py
day-10/: day_10.py  day_10_tests.py
day-11/: day_11.py  day_11_tests.py
day-12/: day_12.py  day_12_tests.py
day-13/: day_13.py  day_13_tests.py
day-14/: day_14.py  day_14_tests.py
day-15/: day_15.py  day_15_tests.py
day-16/: day_16.py  day_16_tests.py
day-17/: day_17.py  day_17_tests.py
day-19/: day_19.py  day_19_tests.py
day-2/: day_2.py  day_2_tests.py
day-21/: day_21.py  day_21_tests.py
day-23/: day_23.py  day_23_tests.py
day-24/: day_24.py  day_24_tests.py
day-25/: day_25.py  day_25_tests.py
day-3/: day_3.py  day_3_tests.py
day-4/: day_4.py  day_4_tests.py
day-5/: day_5.py  day_5_tests.py
day-6/: day_6.py  day_6_tests.py
day-7/: day_7.py  day_7_tests.py
day-8/: day_8.py  day_8_tests.py
day-9/: day_9.py  day_9_tests.py
